Fixed problems on windows